--- a/app/src/main/res/layout-land/activity_add_title.xml
+++ b/app/src/main/res/layout-land/activity_add_title.xml
@@ -45,6 +45,7 @@
         android:singleLine="true"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:hint="DATE"
+        android:editable="false"
         android:id="@+id/adddate"
         android:textSize="20dp"
         android:maxLines="1"
