--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,6 +9,7 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/my_recycler_view"
         android:scrollbars="vertical"
+        android:pointerIcon="grabbing"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
     </android.support.v7.widget.RecyclerView>
@@ -19,8 +20,11 @@
     android:id="@+id/imageButton"
     android:background="@drawable/oval"
     android:layout_alignParentBottom="true"
+    android:pointerIcon="cell"
     android:layout_alignParentEnd="true"
     android:layout_marginBottom="35dp"
     android:layout_marginRight="25dp"
-    android:src="@mipmap/ic_add_white_24dp"/>
+    android:src="@mipmap/ic_about_white_36dp"
+
+    />
 </RelativeLayout>
